--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "next": "latest",
+    "postcss": "^8.2.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "typescript": "4.0"
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "typescript": "^4.1.3"
   },
   "license": "MIT"
 }
