--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "global": "^4.4.0",
     "next": "latest",
+    "npm-check-updates": "^11.1.1",
     "postcss": "^8.2.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
